[AUD-9] Fix modal multi-line title on Safari (#30)

--- a/packages/stems/src/Modal/Modal.module.css
+++ b/packages/stems/src/Modal/Modal.module.css
@@ -108,6 +108,7 @@
   font-weight: var(--font-bold);
   color: var(--neutral);
   margin: 0px 16px 0px;
+  white-space: nowrap;
 }
 
 .subtitle {
